feat: added mapper for transfer destinations